To avoid upgrading to version 10